--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div class="container">
@@ -18,7 +18,7 @@
       <a href="https://youtube.com/@DevsDome" target="_blank"><i class="fab fa-youtube"></i></a>
       <a href="https://instagram.com/devsdome" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://tiktok.com/@devsdome" target="_blank"><i class="fab fa-tiktok"></i></a>
-      <a href="https://x.com/DevsDome" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://x.com/DevsDome" target="_blank"><i class="fab fa-x-twitter"></i></a>
     </div>
   </div>
 </body>
